Improve path parameters naming
